--- a/server/template/default.body.html
+++ b/server/template/default.body.html
@@ -13,7 +13,6 @@
       <td>参数</td>
       <td>类型</td>
       <td>说明</td>
-      <td>校验</td>
     </tr>
     <% requestParams.forEach(it => { %>
       <tr>
@@ -26,14 +25,13 @@
         <td>
           <%= it.desc %>
         </td>
-        <td>
-          <%= it.rule %>
-        </td>
       </tr>
       <% }) %>
   </table>
-  <p>请求示例</p>
-  <pre><%=requestExample%></pre>
+  <div <%= requestExample ? '' : 'style="display:none"'%> >
+    <p>请求示例</p>
+    <pre><%=requestExample%></pre> 
+  </div>
 </section>
 <section <%= responseParams.length>0 ? '' : 'style="display:none"'%> >
   <p>返回参数</p>
@@ -42,7 +40,6 @@
       <td>参数</td>
       <td>类型</td>
       <td>说明</td>
-      <td>校验</td>
     </tr>
     <% responseParams.forEach(it => { %>
       <tr>
@@ -55,14 +52,13 @@
         <td>
           <%=it.desc%>
         </td>
-        <td>
-          <%=it.rule%>
-        </td>
       </tr>
       <% }) %>
   </table>
-  <p>返回示例</p>
-  <pre><%=responseExample%></pre>
+  <div <%= responseExample ? '' : 'style="display:none"'%> >
+    <p>返回示例</p>
+    <pre><%=responseExample%></pre>
+  </div>
 </section>
 <section <%= exceptions.length>0 ? '' : 'style="display:none"'%> >
   <p>异常处理</p>
