--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -1,8 +1,18 @@
 $borderColorTable=#dfe6ec
 .c-red
   color red
+.c-yellow
+  color yellow
+.c-green
+  color green
+.bg-yellow
+  background-color yellow
+.bg-green
+  background-color green
 .c-primary
   color #20a0ff
+.bg-red
+  background-color red
 .p-r
   position relative
 .p-a
@@ -29,6 +39,8 @@ $borderColorTable=#dfe6ec
   vertical-align top
 .va-m
   vertical-align middle
+.va-b
+  vertical-align bottom
 .c-f
   color #fff
 .b-0
@@ -39,6 +51,10 @@ $borderColorTable=#dfe6ec
   left 0
 .r-0
   right 0
+.mt-10
+  margin-top 10px
+.mt-20
+  margin-top 20px
 .ml-0
   margin-left 0
 .ml-10
@@ -49,19 +65,41 @@ $borderColorTable=#dfe6ec
   margin-right 20px
 .mr-50
   margin-right 50px
+.mb-0
+  margin-bottom 0
 .mb-10
   margin-bottom 10px
 .w-150
   width 150px
 .w-200
   width 200px
+.cu-d
+  cursor default
 .cu-p
   cursor pointer
 .cu-t
   cursor text
+.ov-h
+  overflow hidden
+.ov-x-h
+  overflow-x hidden
+.ov-a
+  overflow auto
+.ov-y-a
+  overflow-y auto
+.ov-y-s
+  overflow-y scroll
 .op-0
   opacity 0
 .op-1
   opacity 1
 .border-4
   border 1px solid #dfe6ec
+.to-e
+  text-overflow ellipsis
+.nowrap
+  white-space nowrap
+.z-100
+  z-index 100
+.border-b
+  border-bottom 1px solid #ccc
