--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -47,6 +47,8 @@ $borderColorTable=#dfe6ec
   bottom 0
 .t-0
   top 0
+.t-40
+  top 40px
 .l-0
   left 0
 .r-0
@@ -69,10 +71,14 @@ $borderColorTable=#dfe6ec
   margin-bottom 0
 .mb-10
   margin-bottom 10px
+.pt-40
+  padding-top 40px
 .w-150
   width 150px
 .w-200
   width 200px
+.h-40
+  height 40px
 .cu-d
   cursor default
 .cu-p
