--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -61,6 +61,8 @@ $borderColorTable=#dfe6ec
   margin-left 0
 .ml-10
   margin-left 10px
+.ml-20
+  margin-left 20px
 .mr-10
   margin-right 10px
 .mr-20
