--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -9,6 +9,8 @@ $borderColorTable=#dfe6ec
   background-color yellow
 .bg-green
   background-color green
+.bg-grey
+  background-color grey
 .c-primary
   color #20a0ff
 .bg-red
@@ -89,6 +91,8 @@ $borderColorTable=#dfe6ec
   cursor text
 .ov-h
   overflow hidden
+.ov-v
+  overflow visible
 .ov-x-h
   overflow-x hidden
 .ov-a
