--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -1,10 +1,12 @@
 $borderColorTable=#dfe6ec
+.c-blue
+  color #20A0FF
 .c-red
-  color red
+  color #FF4949
 .c-yellow
-  color yellow
+  color #F7BA2A
 .c-green
-  color green
+  color #13CE66
 .bg-yellow
   background-color yellow
 .bg-green
