--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -21,6 +21,8 @@ $borderColorTable=#dfe6ec
   position relative
 .p-a
   position absolute
+.p-f
+  position fixed
 .d-n
   display none
 .d-b
@@ -121,3 +123,5 @@ $borderColorTable=#dfe6ec
   border-bottom 1px solid #ccc
 .us-n
   user-select none
+.d-f
+  display flex
