--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -7,6 +7,8 @@ $borderColorTable=#dfe6ec
   color #F7BA2A
 .c-green
   color #13CE66
+.bg-white
+  background-color #fff
 .bg-yellow
   background-color yellow
 .bg-green
@@ -125,3 +127,5 @@ $borderColorTable=#dfe6ec
   user-select none
 .d-f
   display flex
+.fd-c
+  flex-direction column
