add json schema

--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -1,6 +1,10 @@
 $borderColorTable=#dfe6ec
 .c-blue
   color #20A0FF
+.c-silver
+  color #8492A6
+.c-gray
+  color #D3DCE6
 .c-red
   color #FF4949
 .c-yellow
