import json list-object bug && json clean

--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -89,6 +89,8 @@ $borderColorTable=#dfe6ec
   margin-bottom 10px
 .pt-40
   padding-top 40px
+.ws-n
+  white-space nowrap
 .w-150
   width 150px
 .w-200
