:bug: fix export && setting

--- a/server/template/default.body.html
+++ b/server/template/default.body.html
@@ -1,11 +1,29 @@
 <h2>
   <%= name %>
 </h2>
-<hr>
-<pre><%= method %> &emsp; <%= url %></pre>
 <p>
   <%= desc %>
 </p>
+<pre><%= method %> &emsp; <%= url %></pre>
+<section <%= urlParams.length>0 ? '' : 'style="display:none"'%> >
+  <p>URL参数</p>
+  <table>
+    <tr>
+      <td>参数</td>
+      <td>说明</td>
+    </tr>
+    <% urlParams.forEach(it => { %>
+      <tr>
+        <td>
+          <%= it.name %>
+        </td>
+        <td>
+          <%= it.remark %>
+        </td>
+      </tr>
+      <% }) %>
+  </table>
+</section>
 <section <%= requestParams.length>0 ? '' : 'style="display:none"'%> >
   <p>请求参数</p>
   <table>
@@ -13,10 +31,6 @@
       <td>参数</td>
       <td>类型</td>
       <td>说明</td>
-<<<<<<< HEAD
-      <td>校验</td>
-=======
->>>>>>> 47fa4b2307a070bbd57f634601c0e6c52d3650d2
     </tr>
     <% requestParams.forEach(it => { %>
       <tr>
@@ -29,16 +43,6 @@
         <td>
           <%= it.desc %>
         </td>
-<<<<<<< HEAD
-        <td>
-          <%= it.rule %>
-        </td>
-      </tr>
-      <% }) %>
-  </table>
-  <p>请求示例</p>
-  <pre><%=requestExample%></pre>
-=======
       </tr>
       <% }) %>
   </table>
@@ -46,7 +50,6 @@
     <p>请求示例</p>
     <pre><%=requestExample%></pre> 
   </div>
->>>>>>> 47fa4b2307a070bbd57f634601c0e6c52d3650d2
 </section>
 <section <%= responseParams.length>0 ? '' : 'style="display:none"'%> >
   <p>返回参数</p>
@@ -55,10 +58,6 @@
       <td>参数</td>
       <td>类型</td>
       <td>说明</td>
-<<<<<<< HEAD
-      <td>校验</td>
-=======
->>>>>>> 47fa4b2307a070bbd57f634601c0e6c52d3650d2
     </tr>
     <% responseParams.forEach(it => { %>
       <tr>
@@ -71,16 +70,6 @@
         <td>
           <%=it.desc%>
         </td>
-<<<<<<< HEAD
-        <td>
-          <%=it.rule%>
-        </td>
-      </tr>
-      <% }) %>
-  </table>
-  <p>返回示例</p>
-  <pre><%=responseExample%></pre>
-=======
       </tr>
       <% }) %>
   </table>
@@ -88,7 +77,6 @@
     <p>返回示例</p>
     <pre><%=responseExample%></pre>
   </div>
->>>>>>> 47fa4b2307a070bbd57f634601c0e6c52d3650d2
 </section>
 <section <%= exceptions.length>0 ? '' : 'style="display:none"'%> >
   <p>异常处理</p>
@@ -107,3 +95,4 @@
     </tr>
   </table>
 </section>
+<hr>
