--- a/web/src/common.styl
+++ b/web/src/common.styl
@@ -19,6 +19,8 @@ $borderColorTable=#dfe6ec
   background-color green
 .bg-grey
   background-color grey
+.bg-light
+  background-color #eef1f6
 .c-primary
   color #20a0ff
 .bg-red
