--- a/server/template/default.head.html
+++ b/server/template/default.head.html
@@ -2,4 +2,6 @@
 <meta name="viewport" content="width=device-widtd, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title><%=title%></title>
-<link rel="stylesheet" href="<%=css%>">
+<style>
+  <%=style%>
+</style>
